--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,15 @@ plugins {
 }
 
 android {
-    namespace 'org.pipsum'
+    namespace 'org.porcumipsum'
     compileSdk 32
 
     defaultConfig {
-        applicationId "org.pipsum"
+        applicationId "org.porcumipsum"
         minSdk 24
         targetSdk 32
         versionCode 1
-        versionName "1.2"
+        versionName "1.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
